--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
     <title>Chess Vision Trainer</title>
   </head>
+  <!-- BEGIN Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-16T1RE3HW2"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-16T1RE3HW2");
+  </script>
+  <!-- END Google tag (gtag.js) -->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
